modificações e implementação de CSS

--- a/contato.html
+++ b/contato.html
@@ -16,27 +16,33 @@
             <li><a href="./contato.html">Contatos</a></li>
         </ul>
     </header>
-    <h1>Entre em contato comigo e me siga nas redes sociais!!</h1>
+    <h1 id="titulo" class="titulo">Entre em contato comigo e me siga nas redes sociais!!</h1>
 
-    <form action="">
-        <label for="nome">Nome:</label><br>
-        <input type="text" id="nome">
-        <br>
-        <br>
-        <label for="email">Email:</label><br>
-        <input type="email" id="email">
-        <br>
-        <br>
-        <label for="nome">Assunto:</label><br>
-        <textarea name="assunto" id="assunto" cols="30" rows="10"></textarea>
-        <br>
+    <div class="form-container">
+        <form action="" class="formulario">
+            <label for="nome">Nome:</label><br>
+            <input type="text" id="nome">
+            <br>
+            <br>
+            <br>
+            <br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email">
+            <br>
+            <br>
+            <br>
+            <br>
+            <label for="nome">Assunto:</label><br>
+            <textarea name="assunto" id="assunto" cols="30" rows="10"></textarea>
+            <br>
 
-        <button>Enviar</button>
-    </form>
+            <button>Enviar</button>
+        </form>
+    </div>
 
     <h2>Redes Sociais</h2>
 
-    <ul>
+    <ul class="social">
         <li><a href="https://github.com/xluhramosx">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/lucianaramos23/">LinkedIn</a></li>
         <li><a href="https://www.instagram.com/xluh.ramosx/">Instagram</a></li>
