--- a/index.html
+++ b/index.html
@@ -18,43 +18,51 @@
     </header>
 
     <main>
-        <h1 id="titulo" class="centro">Wassup!!!!</h1>
+        <h1 id="titulo" class="titulo">Wassup!!!!</h1>
 
-        <img src="./assets/imgs/1687750912522.jpeg" alt="">
-        <p>Olá a todos! Sou Luciana Dandara, uma mulher de 29 anos apaixonada pela vida, pela maternidade e por algumas paixões que tornam minha jornada ainda mais incrível. Além de ser mãe, sou uma entusiasta de experiências que me permitem explorar diferentes mundos, seja viajando para novos lugares, mergulhando em jogos envolventes ou curtindo as nuances de músicas e livros fascinantes.
+        <div class="container">
 
-            Entre as minhas muitas paixões, uma que se destaca é o meu amor por tênis, tornando-me orgulhosamente uma "sneakerhead". Tenho uma coleção que conta histórias, cada par representando uma memória especial de uma viagem, um concerto ou mesmo de um dia tranquilo em casa. Meus favoritos? Ah, são tantos, mas os que têm um lugar especial no meu coração são aqueles que me proporcionam conforto e estilo simultaneamente.
+            <div>
+                <p>Olá a todos! Sou Luciana Dandara, uma mulher de 29 anos apaixonada pela vida, pela maternidade e por algumas paixões que tornam minha jornada ainda mais incrível. Além de ser mãe, sou uma entusiasta de experiências que me permitem explorar diferentes mundos, seja viajando para novos lugares, mergulhando em jogos envolventes ou curtindo as nuances de músicas e livros fascinantes.
 
-            Além disso, sou uma verdadeira entusiasta de camisetas geeks. Nada como expressar minha personalidade através de estampas que refletem meu amor por animes, filmes, séries e cartoons. É incrível como uma simples camiseta pode contar tanto sobre quem somos, não é mesmo?
+                    Entre as minhas muitas paixões, uma que se destaca é o meu amor por tênis, tornando-me orgulhosamente uma "sneakerhead". Tenho uma coleção que conta histórias, cada par representando uma memória especial de uma viagem, um concerto ou mesmo de um dia tranquilo em casa. Meus favoritos? Ah, são tantos, mas os que têm um lugar especial no meu coração são aqueles que me proporcionam conforto e estilo simultaneamente.
 
-        </p>
+                    Além disso, sou uma verdadeira entusiasta de camisetas geeks. Nada como expressar minha personalidade através de estampas que refletem meu amor por animes, filmes, séries e cartoons. É incrível como uma simples camiseta pode contar tanto sobre quem somos, não é mesmo?
+                </p>
+            </div>
+            <div>
+                <img src="./assets/imgs/1687750912522.jpeg" alt="">
+            </div>
+        </div>
     </main>
 
-    <h2>Meus Sneakers Favoritos</h2>
-    <p>Se você compartilha dessas paixões, vou compartilhar alguns dos meus lugares favoritos para adquirir tênis e camisetas incríveis. Quando se trata de sneakers, lojas especializadas ou até mesmo aquela busca online por edições limitadas costumam render verdadeiros tesouros. E para as camisetas geeks, lojas online com uma variedade impressionante de designs exclusivos são o meu refúgio.</p>
+    <section class="listas">
+        <h2>Meus Sneakers Favoritos</h2>
+        <p>Se você compartilha dessas paixões, vou compartilhar alguns dos meus lugares favoritos para adquirir tênis e camisetas incríveis. Quando se trata de sneakers, lojas especializadas ou até mesmo aquela busca online por edições limitadas costumam render verdadeiros tesouros. E para as camisetas geeks, lojas online com uma variedade impressionante de designs exclusivos são o meu refúgio.</p>
 
-    <ol type="1">
-        <li><img src="./assets/imgs/jordan6.jpg" alt="Jordan 6"></li>
-        <p>O Air Jordan 6 é um icônico modelo de tênis de basquete criado pela Nike em colaboração com Michael Jordan. Lançado pela primeira vez em 1991, o design foi influenciado pelo carro esportivo Porsche 911. O tênis apresenta detalhes distintos, como o sistema de fechamento com laço, a língua com abertura para fácil calce e uma unidade de amortecimento visível. O Air Jordan 6 é reconhecido por sua combinação de estilo, desempenho e história, tornando-se um clássico duradouro na cultura sneaker.</p>
+        <ul type="1">
+            <li><img src="./assets/imgs/jordan6.jpg" alt="Jordan 6"></li>
+            <p>O Air Jordan 6 é um icônico modelo de tênis de basquete criado pela Nike em colaboração com Michael Jordan. Lançado pela primeira vez em 1991, o design foi influenciado pelo carro esportivo Porsche 911. O tênis apresenta detalhes distintos, como o sistema de fechamento com laço, a língua com abertura para fácil calce e uma unidade de amortecimento visível. O Air Jordan 6 é reconhecido por sua combinação de estilo, desempenho e história, tornando-se um clássico duradouro na cultura sneaker.</p>
 
-        <li><img src="./assets/imgs/jordan4.webp" alt="Jordan 4"></li>
-        <p>O Air Jordan 4 é um famoso modelo de tênis de basquete da linha Air Jordan, lançado pela Nike em 1989. Projetado por Tinker Hatfield, apresenta uma estética única com detalhes como a aba no calcanhar com o logo "Flight" e uma unidade de amortecimento visível. O design inovador e a durabilidade tornaram o Air Jordan 4 um ícone na cultura sneaker, sendo usado por Michael Jordan em momentos importantes da sua carreira.</p>
+            <li><img src="./assets/imgs/jordan4.webp" alt="Jordan 4"></li>
+            <p>O Air Jordan 4 é um famoso modelo de tênis de basquete da linha Air Jordan, lançado pela Nike em 1989. Projetado por Tinker Hatfield, apresenta uma estética única com detalhes como a aba no calcanhar com o logo "Flight" e uma unidade de amortecimento visível. O design inovador e a durabilidade tornaram o Air Jordan 4 um ícone na cultura sneaker, sendo usado por Michael Jordan em momentos importantes da sua carreira.</p>
 
-        <li><img src="./assets/imgs/adi200.jpg" alt="Adi200"></li>
-        <p>Com um estilo poderoso e ousado que remete à era icônica dos anos 2000, os tênis Adidas Adi2000 personificam a fusão perfeita entre moda retrô e moderna. Com linhas arrojadas e detalhes marcantes, este modelo captura a essência da cultura sneaker da época. Sua construção inovadora e a presença marcante do logotipo Adidas refletem a influência audaciosa dessa era, proporcionando um visual distintamente nostálgico e contemporâneo para os amantes de calçados.</p>
+            <li><img src="./assets/imgs/adi200.jpg" alt="Adi200"></li>
+            <p>Com um estilo poderoso e ousado que remete à era icônica dos anos 2000, os tênis Adidas Adi2000 personificam a fusão perfeita entre moda retrô e moderna. Com linhas arrojadas e detalhes marcantes, este modelo captura a essência da cultura sneaker da época. Sua construção inovadora e a presença marcante do logotipo Adidas refletem a influência audaciosa dessa era, proporcionando um visual distintamente nostálgico e contemporâneo para os amantes de calçados.</p>
 
-        <li><img src="./assets/imgs/sk8-hi.webp" alt="Adi200"></li>
-        <p>Os Vans Sk8-Hi são tênis de cano alto da marca Vans, conhecidos por seu design clássico e estético "skate". Lançados inicialmente em 1978, esses tênis se destacam por sua durabilidade, aderência eficiente e proteção no tornozelo. O modelo Sk8-Hi tornou-se um ícone da cultura skate e streetwear, apreciado não apenas por skatistas, mas também por entusiastas de moda urbana. Sua versatilidade e apelo atemporal fazem dos Vans Sk8-Hi uma escolha popular para quem busca um visual casual e autêntico.</p>
-    </ol>
+            <li><img src="./assets/imgs/sk8-hi.webp" alt="Adi200"></li>
+            <p>Os Vans Sk8-Hi são tênis de cano alto da marca Vans, conhecidos por seu design clássico e estético "skate". Lançados inicialmente em 1978, esses tênis se destacam por sua durabilidade, aderência eficiente e proteção no tornozelo. O modelo Sk8-Hi tornou-se um ícone da cultura skate e streetwear, apreciado não apenas por skatistas, mas também por entusiastas de moda urbana. Sua versatilidade e apelo atemporal fazem dos Vans Sk8-Hi uma escolha popular para quem busca um visual casual e autêntico.</p>
+        </ul>
 
-    <h2>Minhas lojas de camisetas geeks favoritas.</h2>
+        <h2>Minhas lojas de camisetas geeks favoritas.</h2>
 
-    <ol type="1">
-        <li><a href="https://www.nerduniverse.com.br/">Nerd Universe</a></li>
-        <li><a href="https://www.gatogeek.com.br/">Gato Geek</a></li>
-        <li><a href="https://www.terra7.com.br/">Terra7</a></li>
-        <li><a href="https://www.nerdexplosion.com/">Nerd Explosion</a></li>
-    </ol>
+        <ul>
+            <li><a href="https://www.nerduniverse.com.br/">Nerd Universe</a></li>
+            <li><a href="https://www.gatogeek.com.br/">Gato Geek</a></li>
+            <li><a href="https://www.terra7.com.br/">Terra7</a></li>
+            <li><a href="https://www.nerdexplosion.com/">Nerd Explosion</a></li>
+        </ul>
+    </section>
 
 
 </body>
